[gd_scene load_steps=9 format=3 uid="uid://blq8pejg0n2nt"]

[ext_resource type="Script" path="res://scripts/NPC2.gd" id="1_jnwna"]
[ext_resource type="Texture2D" uid="uid://lt80lxtyxab5" path="res://visuals/NPC 2.png" id="2_m5vx2"]
[ext_resource type="AudioStream" uid="uid://cxdyfgthpaaeb" path="res://sounds/talk.wav" id="3_leygm"]

[sub_resource type="Animation" id="Animation_fe0xs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lbc5r"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_3t4i7"]
resource_name = "selected"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57kgy"]
_data = {
"RESET": SubResource("Animation_fe0xs"),
"idle": SubResource("Animation_lbc5r"),
"selected": SubResource("Animation_3t4i7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_w5yfy"]
radius = 40.0125

[node name="NPC2" type="StaticBody2D"]
script = ExtResource("1_jnwna")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_m5vx2")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_57kgy")
}

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_w5yfy")

[node name="Label" type="Label" parent="."]
offset_left = -77.0
offset_top = -126.0
offset_right = 83.0
offset_bottom = -77.0
horizontal_alignment = 1
autowrap_mode = 2

[node name="talk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_leygm")
volume_db = -16.228
pitch_scale = 1.64

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
